# Perihelion

./: .gitignore  LICENSE  README.md  package-lock.json  package.json  tsconfig.base.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  evm.yml  soroban.yml
contracts/: README.md
contracts/evm/: foundry.toml  slither.config.json
contracts/evm/script/: Deploy.s.sol  DeployTimelock.s.sol
contracts/evm/src/: IERC20.sol  PerihelionEscrow.sol  PerihelionTimelock.sol
contracts/evm/test/: Fuzz.t.sol  Integration.t.sol  Invariant.t.sol  PerihelionEscrow.t.sol  PerihelionTimelock.t.sol  (+1 more)
contracts/soroban/: Cargo.toml
contracts/soroban/settlement/: Cargo.toml
contracts/soroban/settlement/src/: endpoint.rs  error.rs  lib.rs  messages.rs  test.rs  types.rs
docs/: CONTRIBUTING.md  README.md  TECHNICAL-ARCHITECTURE.md  architecture.md  deployment.md  faq.md  glossary.md  intent-spec.md  running-a-solver.md
mempool/: README.md  package.json  tsconfig.json
mempool/src/: cli.ts  index.ts  server.ts  store.ts  types.ts
relayer/: .env.example  README.md  package.json
relayer/src/: config.ts  evm-watcher.ts  index.ts  relayer.ts  soroban-delivery.ts  types.ts
relayer/test/: relayer.test.ts
sdk/: README.md  package.json
sdk/src/: client.ts  index.ts  intent.ts  types.ts
sdk/test/: intent.test.ts
solver/: .env.example  README.md  package.json
solver/src/: config.ts  executor-config.ts  executor.ts  index.ts  quote.ts  solver.ts
solver/test/: quote.test.ts
(+4 files in other folders)
